# ChangeLog for media-video/cclive
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/media-video/cvs-repo/gentoo-x86/media-video/cclive/ChangeLog,v 1.36 2011/10/10 07:45:25 radhermit Exp $

  10 Oct 2011; Tim Harder <radhermit@gentoo.org> -cclive-0.7.4.ebuild,
  -cclive-0.7.4.1.ebuild, -cclive-0.7.5.ebuild, -cclive-0.7.6.ebuild:
  Remove old.

*cclive-0.7.6-r1 (10 Oct 2011)

  10 Oct 2011; Tim Harder <radhermit@gentoo.org> +cclive-0.7.6-r1.ebuild:
  Revbump to move to media-libs/libquvi dependency and add xz-utils build dep.

*cclive-0.7.6 (15 Sep 2011)

  15 Sep 2011; Tim Harder <radhermit@gentoo.org> +cclive-0.7.6.ebuild:
  Version bump.

*cclive-0.7.5 (17 Aug 2011)

  17 Aug 2011; Tim Harder <radhermit@gentoo.org> +cclive-0.7.5.ebuild:
  Version bump

*cclive-0.7.4.1 (05 Aug 2011)

  05 Aug 2011; Hanno Boeck <hanno@gentoo.org> +cclive-0.7.4.1.ebuild:
  Version bump.

  05 Aug 2011; Markos Chandras <hwoarang@gentoo.org> cclive-0.7.2.ebuild:
  Append -DBOOST_FILESYSTEM_VERSION=2 to C{XX}FLAGS to compile with new boost
  releases. Bug #377799

  22 Jun 2011; Alexis Ballier <aballier@gentoo.org> -cclive-0.5.3.ebuild,
  -cclive-0.5.8.ebuild, -cclive-0.6.5.ebuild, -cclive-0.7.3.1.ebuild:
  remove old

*cclive-0.7.4 (22 Jun 2011)

  22 Jun 2011; Alexis Ballier <aballier@gentoo.org> +cclive-0.7.4.ebuild:
  version bump

  02 May 2011; Thomas Kahle <tomka@gentoo.org> cclive-0.7.2.ebuild:
  x86 stable per bug 357773

  27 Mar 2011; Kacper Kowalik <xarthisius@gentoo.org> cclive-0.7.2.ebuild:
  ppc/ppc64 stable wrt #357773

*cclive-0.7.3.1 (20 Mar 2011)

  20 Mar 2011; Tim Harder <radhermit@gentoo.org> +cclive-0.7.3.1.ebuild:
  Version bump. Update to EAPI 4, remove versionator eclass usage, and use
  array notation for DOCS.

  08 Mar 2011; Markos Chandras <hwoarang@gentoo.org> cclive-0.7.2.ebuild:
  Stable on amd64 wrt bug #357773

*cclive-0.7.2 (09 Feb 2011)
