@@ -1,0 +1,21 @@
+# Copyright 1999-2011 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /usr/local/ssd/gentoo-x86/output/media-video/cvs-repo/gentoo-x86/media-video/cclive/cclive-0.7.6.ebuild,v 1.3 2011/10/18 23:41:23 radhermit Exp $
+
+EAPI=4
+
+DESCRIPTION="Command line tool for extracting videos from various websites"
+HOMEPAGE="http://cclive.sourceforge.net/"
+SRC_URI="mirror://sourceforge/${PN}/${PV:0:3}/${P}.tar.xz"
+
+LICENSE="GPL-3"
+SLOT="0"
+KEYWORDS="~amd64 ~ppc ~ppc64 ~x86"
+IUSE=""
+
+RDEPEND=">=media-libs/quvi-0.2.17
+	>=dev-libs/boost-1.42
+	>=net-misc/curl-7.20
+	>=dev-libs/libpcre-8.02[cxx]"
+DEPEND="${RDEPEND}
+	dev-util/pkgconfig"
